--- a/main/CalendarProvider.apk/res/values-cs/strings.xml
+++ b/main/CalendarProvider.apk/res/values-cs/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="calendar_storage">Úložiště Kalendáře</string>
-<string name="upgrade_msg">Probíhá aktualizace databáze Kalendáře.</string>
-<string name="calendar_default_name">Výchozí</string>
-<string name="calendar_info">Informace o kalendáři</string>
-<string name="calendar_info_error">Chyba</string>
-<string name="calendar_info_no_calendars">Žádné kalendáře</string>
-<string name="calendar_info_events">Události: %1$d</string>
-<string name="calendar_info_events_dirty">Události: %1$d, neuložené: %2$d</string>
-<string name="provider_label">Kalendář</string>
-<string name="debug_tool_delete_button">Smazat</string>
-<string name="debug_tool_start_button">Spustit</string>
-<string name="debug_tool_message">Chystáte se 1) vytvořit na kartě SD nebo v úložišti USB kopii databáze kalendáře, která bude čitelná pro všechny aplikace, a 2) poslat ji e-mailem. Po úspěšném zkopírování ze zařízení nebo přijetí e-mailem ji nezapomeňte ihned odstranit.</string>
-<string name="debug_tool_email_sender_picker">Vyberte program pro odeslání souboru</string>
-<string name="debug_tool_email_subject">Přiložena je databáze Kalendáře</string>
-<string name="debug_tool_email_body">Přiložil(a) jsem databázi kalendáře se všemi schůzkami a osobními informacemi. Zacházejte s ní prosím opatrně.</string>
+    <string name="calendar_storage">Ukládání kalendáře</string>
+    <string name="upgrade_msg">Inovace databáze kalendáře.</string>
+    <string name="calendar_default_name">Výchozí</string>
+    <string name="calendar_info">Informace o kalendáři</string>
+    <string name="calendar_info_error">Chyba</string>
+    <string name="calendar_info_no_calendars">Žádné kalendáře</string>
+    <string name="calendar_info_events">Události: %1$d</string>
+    <string name="calendar_info_events_dirty">Události: %1$d, neuložené: %2$d</string>
+    <string name="provider_label">Kalendář</string>
+    <string name="debug_tool_delete_button">Nyní odstranit</string>
+    <string name="debug_tool_start_button">Začátek</string>
+    <string name="debug_tool_message">1) Provést kopii databáze kalendáře pro SD karty/USB úložiště, který je čitelný pro jakékoliv aplikace a 2) e-mail. Nezapomeňte odstranit kopie, jak úspěšně zkopírovali jste to ze zařízení nebo e-mailu je přijat.</string>
+    <string name="debug_tool_email_sender_picker">Zvolte program pro odeslání souboru</string>
+    <string name="debug_tool_email_subject">Kalendář Db připojena</string>
+    <string name="debug_tool_email_body">Připojena je moje databáze kalendáře se všemi událostmi a osobními informacemi. Manipulujte opatrně.</string>
 </resources>
